@@ -79,6 +79,7 @@ import org.springframework.util.StringUtils;
  * @author Chris Bono
  * @author Vikas Garg
  * @author John Blum
+ * @author Roman Osadchuk
  */
 @SuppressWarnings("ConstantConditions")
 public abstract class LettuceConverters extends Converters {
@@ -720,7 +721,7 @@ public abstract class LettuceConverters extends Converters {
 					args = args.overflow(type);
 				}
 
-				args = args.incrBy(bitFieldType, (int) subCommand.getOffset().getValue(), ((BitFieldIncrBy) subCommand).getValue());
+				args = args.incrBy(bitFieldType, offset, ((BitFieldIncrBy) subCommand).getValue());
 			}
 		}
 
@@ -862,16 +863,15 @@ public abstract class LettuceConverters extends Converters {
 			return GeoSearch.byRadius(radius.getValue(), toGeoArgsUnit(radius.getMetric()));
 		}
 
-		if (predicate instanceof BoxShape) {
+		if (predicate instanceof BoxShape boxPredicate) {
 
-			BoxShape boxPredicate = (BoxShape) predicate;
 			BoundingBox boundingBox = boxPredicate.getBoundingBox();
 
 			return GeoSearch.byBox(boundingBox.getWidth().getValue(), boundingBox.getHeight().getValue(),
 					toGeoArgsUnit(boxPredicate.getMetric()));
 		}
 
-		throw new IllegalArgumentException(String.format("Cannot convert %s to Lettuce GeoPredicate", predicate));
+		throw new IllegalArgumentException("Cannot convert %s to Lettuce GeoPredicate".formatted(predicate));
 	}
 
 	static <T> GeoSearch.GeoRef<T> toGeoRef(GeoReference<T> reference) {
@@ -880,14 +880,12 @@ public abstract class LettuceConverters extends Converters {
 			return GeoSearch.fromMember(((GeoMemberReference<T>) reference).getMember());
 		}
 
-		if (reference instanceof GeoReference.GeoCoordinateReference) {
-
-			GeoCoordinateReference<?> coordinates = (GeoCoordinateReference<?>) reference;
+		if (reference instanceof GeoCoordinateReference<?> coordinates) {
 
 			return GeoSearch.fromCoordinates(coordinates.getLongitude(), coordinates.getLatitude());
 		}
 
-		throw new IllegalArgumentException(String.format("Cannot convert %s to Lettuce GeoRef", reference));
+		throw new IllegalArgumentException("Cannot convert %s to Lettuce GeoRef".formatted(reference));
 	}
 
 	static FlushMode toFlushMode(@Nullable RedisServerCommands.FlushOption option) {
