@@ -540,8 +540,8 @@ public class MappingRedisConverter implements RedisConverter, InitializingBean {
 				map.put(((Entry<?, ?>) pUpdate.getValue()).getKey(), ((Entry<?, ?>) pUpdate.getValue()).getValue());
 			} else {
 				throw new MappingException(
-						String.format("Cannot set update value for map property '%s' to '%s'; Please use a Map or Map.Entry",
-								pUpdate.getPropertyPath(), pUpdate.getValue()));
+						("Cannot set update value for map property '%s' to '%s';" + " Please use a Map or Map.Entry")
+								.formatted(pUpdate.getPropertyPath(), pUpdate.getValue()));
 			}
 
 			writeMap(entity.getKeySpace(), pUpdate.getPropertyPath(), targetProperty.getMapValueType(), map, sink);
@@ -601,8 +601,7 @@ public class MappingRedisConverter implements RedisConverter, InitializingBean {
 			} else {
 
 				if (!ClassUtils.isAssignable(typeHint.getType(), value.getClass())) {
-					throw new MappingException(
-							String.format(INVALID_TYPE_ASSIGNMENT, value.getClass(), path, typeHint.getType()));
+					throw new MappingException(INVALID_TYPE_ASSIGNMENT.formatted(value.getClass(), path, typeHint.getType()));
 				}
 				writeToBucket(path, value, sink, typeHint.getType());
 			}
@@ -751,7 +750,7 @@ public class MappingRedisConverter implements RedisConverter, InitializingBean {
 
 			if (!ClassUtils.isAssignable(typeHint.getType(), value.getClass())) {
 				throw new MappingException(
-						String.format(INVALID_TYPE_ASSIGNMENT, value.getClass(), currentPath, typeHint.getType()));
+						INVALID_TYPE_ASSIGNMENT.formatted(value.getClass(), currentPath, typeHint.getType()));
 			}
 
 			if (customConversions.hasCustomWriteTarget(value.getClass())) {
@@ -794,7 +793,7 @@ public class MappingRedisConverter implements RedisConverter, InitializingBean {
 				sink.getBucket().put(path, toBytes(value));
 			} else {
 				throw new IllegalArgumentException(
-						String.format("Cannot convert value '%s' of type %s to bytes", value, value.getClass()));
+						"Cannot convert value '%s' of type %s to bytes".formatted(value, value.getClass()));
 			}
 		}
 	}
@@ -855,7 +854,7 @@ public class MappingRedisConverter implements RedisConverter, InitializingBean {
 
 			if (!ClassUtils.isAssignable(mapValueType, entry.getValue().getClass())) {
 				throw new MappingException(
-						String.format(INVALID_TYPE_ASSIGNMENT, entry.getValue().getClass(), currentPath, mapValueType));
+						INVALID_TYPE_ASSIGNMENT.formatted(entry.getValue().getClass(), currentPath, mapValueType));
 			}
 
 			if (customConversions.hasCustomWriteTarget(entry.getValue().getClass())) {
@@ -945,8 +944,7 @@ public class MappingRedisConverter implements RedisConverter, InitializingBean {
 
 		Matcher matcher = pattern.matcher(key);
 		if (!matcher.find()) {
-			throw new IllegalArgumentException(
-					String.format("Cannot extract map value for key '%s' in path '%s'.", key, path));
+			throw new IllegalArgumentException("Cannot extract map value for key '%s' in path '%s'".formatted(key, path));
 		}
 
 		Object mapKey = matcher.group(2);
@@ -1224,7 +1222,7 @@ public class MappingRedisConverter implements RedisConverter, InitializingBean {
 		 */
 		public static KeyspaceIdentifier of(String key) {
 
-			Assert.isTrue(isValid(key), String.format("Invalid key %s", key));
+			Assert.isTrue(isValid(key), () -> "Invalid key %s".formatted(key));
 
 			boolean phantomKey = key.endsWith(PHANTOM_SUFFIX);
 			int keyspaceEndIndex = key.indexOf(DELIMITER);
@@ -1304,7 +1302,7 @@ public class MappingRedisConverter implements RedisConverter, InitializingBean {
 		 */
 		public static BinaryKeyspaceIdentifier of(byte[] key) {
 
-			Assert.isTrue(isValid(key), String.format("Invalid key %s", new String(key)));
+			Assert.isTrue(isValid(key), () -> "Invalid key %s".formatted(new String(key)));
 
 			boolean phantomKey = ByteUtils.startsWith(key, PHANTOM_SUFFIX, key.length - PHANTOM_SUFFIX.length);
 
