@@ -15,6 +15,7 @@
  */
 package org.springframework.data.redis.support.atomic;
 
+import java.io.Serial;
 import java.io.Serializable;
 import java.util.Date;
 import java.util.concurrent.TimeUnit;
@@ -46,6 +47,7 @@ import org.springframework.util.Assert;
  */
 public class RedisAtomicDouble extends Number implements Serializable, BoundKeyOperations<String> {
 
+	@Serial
 	private static final long serialVersionUID = 1L;
 
 	private volatile String key;
@@ -158,11 +160,12 @@ public class RedisAtomicDouble extends Number implements Serializable, BoundKeyO
 	public double get() {
 
 		Double value = operations.get(key);
+
 		if (value != null) {
 			return value;
 		}
 
-		throw new DataRetrievalFailureException(String.format("The key '%s' seems to no longer exist", key));
+		throw new DataRetrievalFailureException("The key '%s' seems to no longer exist".formatted(key));
 	}
 
 	/**
